# GenesisPlayground

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  bash.sh  pyproject.toml  run.sh  sbatch.sh  slurm-46494021.out  slurm-46502812.out  slurm-46506497.out  slurm-46562131.out  submit.sh  test.py  test.sh  train.sh
assets/robot/wujihand-urdf/: .gitignore  CMakeLists.txt  merged_tactile_grid.json  merged_tactile_grid_fingertips.json  merged_tactile_grid_free.json  package.xml
assets/robot/wujihand-urdf/.scripts/: left.yaml  right.yaml  urdf_to_yaml.py
assets/robot/wujihand-urdf/launch/: display.left.py
assets/robot/wujihand-urdf/meshes/left/: finger1_link2.STL  finger1_link3.STL  finger1_tip_link.STL  finger2_link1.STL  finger2_link2.STL  finger2_link3.STL  finger2_link4.STL  finger2_tip_link.STL  finger3_link2.STL  finger3_link3.STL  finger4_link1.STL  finger4_link3.STL  finger4_link4.STL  finger5_link4.STL  palm_link.STL
assets/robot/wujihand-urdf/meshes/right/: finger1_link4.STL  finger1_tip_link.STL  finger2_link1.STL  finger2_link3.STL  finger3_link1.STL  finger3_link2.STL  finger3_link4.STL  finger4_link3.STL  finger4_link4.STL  finger5_link1.STL  finger5_link2.STL  finger5_link4.STL  finger5_tip_link.STL
assets/robot/wujihand-urdf/rviz/: robot_display.rviz
assets/robot/wujihand-urdf/urdf/: right.urdf
cyclonedds/: .pre-commit-config.yaml  .travis.yml  azure-pipelines.yml
deploy/: .gitignore  g1_calibrate_foot.py  g1_calibrate_robot.py  g1_calibrate_robot_sim.py  g1_calibrate_timeshift.py  g1_calibrate_timeshift_sim.py  g1_calibration_foot.py  g1_latency_test.py  g1_motion.py  g1_pd_test.py  g1_pd_vis.py  g1_r2s_config.py  g1_teleop.py  g1_visualize.py  g1_visualize_test.py  g1_visualize_with_offset.py  g1_walking.py  height_map.py  impedance_real.py  impedance_sim.py  log_test.py  math_utils_test.py  motion_publisher.py  replacements.txt  utils.py  visualize_robot.py
examples/: convert_hub.py  convert_lafan.py  convert_twist.py  convert_twist_folder.py  g1_latency_test.py  replay_shadow_trajectory.py  replay_with_viewer.py  run_bc_gym.py  run_bc_motion.py  run_dagger_motion.py  run_pick_cube_teleop.py  run_ppo_gs.py  run_ppo_gym.py  run_ppo_hand_imitator.py  run_ppo_inhand_rotation.py  run_ppo_legged.py  run_ppo_teleop.py  (+8 more)
src/agent/: README.md  pyproject.toml
src/agent/gs_agent/algos/: __init__.py  bc.py  dagger.py  ppo.py
src/agent/gs_agent/algos/config/: registry.py  schema.py
src/agent/gs_agent/bases/: algo.py  base_algo.py  base_buffer.py  base_env_wrapper.py  buffer.py  critic.py  env_wrapper.py  network_backbone.py  policy.py  runner.py
src/agent/gs_agent/buffers/: __init__.py  bc_buffer.py  dagger_buffer.py  gae_buffer.py  mini_batches.py  transition.py
src/agent/gs_agent/buffers/config/: __init__.py  schema.py
src/agent/gs_agent/configs/: __init__.py  bc_cfg.py  ppo_cfg.py  registry.py  schema.py
src/agent/gs_agent/envs/: gym_wrapper.py
src/agent/gs_agent/modules/: __init__.py  actor_critic.py  critics.py  models.py  normalizer.py  policies.py
src/agent/gs_agent/modules/config/: registry.py  schema.py
src/agent/gs_agent/runners/: onpolicy_runner.py  runner.py
src/agent/gs_agent/runners/config/: registry.py  schema.py
src/agent/gs_agent/utils/: base_types.py  logger.py  misc.py  policy_loader.py  torch_utils.py
src/agent/gs_agent/wrappers/: gs_env_wrapper.py  gym_env_wrapper.py  teleop_wrapper.py
src/agent/tests/buffers/: test_bc_buffer.py
src/env/: README.md  pyproject.toml
src/env/gs_env/common/bases/: __init__.py  base_env.py  base_object.py  base_robot.py  base_sensor.py  device.py
src/env/gs_env/common/rewards/: __init__.py  g1_no_waist_terms.py  g1_terms.py  hand_imitator_terms.py  leggedrobot_terms.py  manipulation_terms.py  reward_terms.py  utils.py
src/env/gs_env/common/utils/: gs_utils.py  maniptrans_util.py  math_utils.py  misc_utils.py  motion_lib.py  motion_utils.py
src/env/gs_env/interface/: teleop_wrapper.py
src/env/gs_env/real/: README.md  __init__.py  height_map_handler.py  leggedrobot_env.py  leggedrobots.py  low_state_controller.py  low_state_handler.py  optitrack_env.py  real2sim_env.py
src/env/gs_env/real/config/: registry.py  schema.py
src/env/gs_env/real/optitrack/: DataDescriptions.py  NatNetClient.py  optitrack_config.py
src/env/gs_env/real/unitree/: README.md  __init__.py  low_state_controller.py  low_state_handler.py
src/env/gs_env/real/unitree/utils/: hf_logger.py  low_state_controller.py  low_state_handler.py
src/env/gs_env/sim/envs/: __init__.py  so101_cube_env.py
src/env/gs_env/sim/envs/config/: registry.py  schema.py
src/env/gs_env/sim/envs/locomotion/: __init__.py  custom_env.py  custome_env.py  imitation_teacher_env.py  leggedrobot_env.py  motion_env.py  teleop_teacher_env.py  walking_env.py
src/env/gs_env/sim/envs/manipulation/: __init__.py  goal_reaching_env.py  hand_imitator_env.py  inhand_rotation_env.py  pick_cube_env.py  single_hand_retargeting_env.py  tactile_visualizer.py
src/env/gs_env/sim/objects/config/: registry.py  schema.py
src/env/gs_env/sim/robots/: __init__.py  leggedrobots.py  manipulators.py  so101_robot.py
src/env/gs_env/sim/robots/config/: registry.py  schema.py
src/env/gs_env/sim/scenes/: __init__.py  custom_scene.py  flat_scene.py
src/env/gs_env/sim/scenes/config/: registry.py  schema.py
src/env/gs_env/sim/sensors/: camera.py
src/env/gs_env/sim/sensors/config/: registry.py  schema.py
src/gs-agent/: pyproject.toml
src/gs-env/: README.md  pyproject.toml
src/gs-env/gs_env/common/bases/: base_env.py  base_robot.py  base_scene.py
src/gs-env/gs_env/common/utils/: asset_utils.py  gs_types.py  gs_utils.py  math_utils.py  misc_utils.py
src/gs-env/gs_env/sim/envs/config/: schema.py
src/gs-env/gs_env/sim/objects/config/: registry.py
src/gs-env/gs_env/sim/scenes/: __init__.py  flat_scene.py
src/gs-env/gs_env/sim/scenes/config/: registry.py  schema.py
src/gs-env/gs_env/sim/sensors/: camera.py
src/gs-schema/: pyproject.toml
src/schemas/: README.md  pyproject.toml
src/schemas/gs_schemas/: base_types.py
(+267 files in other folders)
