[project]
name = "genesis-playground"
description = "Meta-package for gs-schema, gs-env, and gs-agent"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
  "gs-schema>=0.1,<0.2",
  "gs-env>=0.1,<0.2",
  "gs-agent>=0.1,<0.2",
]

[project.optional-dependencies]
dev = ["ruff>=0.5", "pyright>=1.1", "pytest>=8", "pytest-cov>=5", "mkdocs-material>=9.5"]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION"

[tool.uv.workspace]
members = [
  "src/gs-schema",
  "src/gs-env",
  "src/gs-agent",
]
