[project]
name = "gs-agent"
version = "0.1.0"
description = "RL and Imitation Learning algorithms for Genesis Playground."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "gs-schemas>=0.1,<0.2",
  "torch>=2.2",
  "tensordict>=0.9",
  "gymnasium>=1.2.0",
  "pandas>=2.3.2",
  "fire>=0.7.0",
  "wandb>=0.21.3",
  "matplotlib>=3.10.0",
]

[project.optional-dependencies]
env = ["gs-env>=0.1,<0.2"]
log = ["wandb>=0.17"]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "../../VERSION"
