[project]
name = "gs-env"
version = "0.1.0"
description = "Genesis-based simulation environments."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["gs-schema>=0.1,<0.2"]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "../../VERSION"
