[project]
name = "gs-schema"
# version sourced via Hatch (see [tool.hatch.version])
description = "Shared typed interfaces for Genesis Playground"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["pydantic>=2.7"]

[project.optional-dependencies]
types = ["jaxtyping>=0.2.28", "numpy>=1.26"]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "../../VERSION"
